Cleaned up table label padding, fixed text-overflow

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -160,7 +160,6 @@
 	}
 
 	/***** TRANSACTION HISTORY STYLES *****/
-
 	#transaction-history-table {
 		text-align: center;
 		border-bottom: 1px solid #BBB;
@@ -172,25 +171,15 @@
 		.amount.label {
 			width: 100%;
 			display: inline-block;
-			}
-		.td-label {
-			padding-left: 0;
-			padding-right: 0;
 		}
-		.td-truncate {
-			position: relative;
-			.td-a {
-		    position: absolute;
-		    max-width: 100%;
-		    white-space: nowrap;
-		    overflow: hidden;
-		    text-overflow: ellipsis;
-		    text-align: center
-			}
-			.td-b {
-		    height: 0;
-		    overflow: hidden;
-			}
+		.fit-to-contents {
+			width: 1%;
+		}
+		.first-column {
+			padding-left: 10px;
+		}
+		.last-column {
+			padding-right: 10px;
 		}
 	}
 
@@ -213,8 +202,8 @@
 		}
 		#address-book-table {
 			margin-bottom: 0;
-			.address-book-contact {
-				padding-left: 10px;
+			.address-book-contact-label {
+				width: 1%;
 			}
 			td {
 				height: auto;
@@ -223,10 +212,28 @@
 			}
 			td>div {
 				height:35px;
-				padding: 7px 5px;
+				padding: 9px 5px;
 				height: 35px;
 				border-top: 1px solid #dddddd;
 			}
+			.fit-to-contents>div {
+				width: 1%;
+			}
+			.first-column>div {
+				padding-left: 10px;
+			}
+			.last-column>div {
+				padding-right: 10px;
+			}
+		}
+	}
+
+	#transaction-history-table, #address-book-table {
+		.td-truncate {
+			display: none;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 	}
 
